name:                   judge
version:                0.1.0.0
synopsis:               Tableau-based theorem prover for justification logic.
--description:            
homepage:               https://github.com/slakkenhuis/judge#readme
license:                GPL-3
license-file:           LICENSE
author:                 ns@slak.ws
maintainer:             ns@slak.ws
category:               Logic
build-type:             Simple
extra-source-files:     README.md
                      , logic/J0-proposal.yml
                      , logic/J0-naive.yml
                      , logic/J0-wrong.yml

cabal-version:          >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Logic.Judge.CLI
                      , Logic.Judge.PointedList
                      , Logic.Judge.Parser
                      , Logic.Judge.Printer
                      , Logic.Judge.Formula
                      , Logic.Judge.Formula.Datastructure
                      , Logic.Judge.Formula.Parser
                      , Logic.Judge.Formula.Printer
                      , Logic.Judge.Formula.Substitution
                      , Logic.Judge.Tableau.Specification
                      , Logic.Judge.Tableau.Printer
                      , Logic.Judge.Tableau.Yaml  
                      , Logic.Judge.Tableau.Algorithm
                      , Logic.Judge.Tableau.Analytics
    build-depends:      base >=4.7 && <5
                      , text
                      , containers
                      , unordered-containers
                      , pointedlist
                      , transformers
                      , mtl
                      , vector
                      , attoparsec
                      , aeson
                      , yaml
                      , ansi-wl-pprint
                      , optparse-applicative
                      , terminal-size
    default-language:   Haskell2010


executable judge
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      base
                      , judge
                      , text
                      , yaml
                      , unordered-containers
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010


source-repository head
    type:               git
    location:           https://github.com/slakkenhuis/judge
